--- a/less/framework/fallbacks.less
+++ b/less/framework/fallbacks.less
@@ -77,6 +77,11 @@
   	}
   }
   
+  .btn-green {
+    filter: none;
+    background: #007c41;
+  }
+  
   
   hr.soften {
     text-align: center;
